add more parameters; parse the output file and create a ready-to-plot file